# shellmodel

./: CMakeLists.txt  Doxyfile  Exception_with_message.cpp  Exception_with_message.hpp  File.cpp  File.hpp  LICENSE  Observables.cpp  Observables.hpp  README.md  Solver.cpp  Solver.hpp  check.hpp  doc_mainpage.md  main.cpp
